# where

./: .gitignore  Cargo.toml  DESIGN.md  README.md  default.nix  dev-setup.md  package-lock.json  package.json  tsconfig.json  we.prodtest.config.json
.github/workflows/: build-dna.yml  build-electron.yml  build-webhapps.yml  main.yml  release.yml  test.yml
dna/: README.md
dna/tests/: package.json
dna/tests/src/: index.ts  where.ts
dna/workdir/dna/: dna.yaml  ludotheque_dna.yaml  where.dna
dna/workdir/dna-ludotheque/: dna.yaml
dna/workdir/dna-where/: dna.yaml  where.dna
dna/workdir/happ/: happ.yaml  sample-happ.happ  where.happ  where_happ.yaml
dna/workdir/happ-ludotheque/: happ.yaml
dna/workdir/happ-where/: happ.yaml  where.happ
dna/workdir/happ-where-standalone/: happ.yaml
dna/zomes/ludotheque/: Cargo.toml
dna/zomes/ludotheque/src/: export_playset.rs  lib.rs  playset.rs
dna/zomes/ludotheque_integrity/: Cargo.toml
dna/zomes/ludotheque_integrity/src/: lib.rs  playset.rs
dna/zomes/playset/: Cargo.toml
dna/zomes/playset/src/: emoji_group.rs  export_piece.rs  export_space.rs  get_inventory.rs  import_entry.rs  import_piece.rs  lib.rs  space.rs  svg_marker.rs  template.rs
dna/zomes/playset/src/pieces/: emoji_group.rs  mod.rs  space.rs  svg_marker.rs  template.rs
dna/zomes/playset_integrity/: Cargo.toml
dna/zomes/playset_integrity/src/: lib.rs
dna/zomes/playset_integrity/src/pieces/: emoji_group.rs  mod.rs  space.rs  svg_marker.rs  template.rs
dna/zomes/profiles/: Cargo.toml
dna/zomes/profiles_integrity/: Cargo.toml
dna/zomes/where/: Cargo.toml
dna/zomes/where/src/: emoji_group.rs  error.rs  here.rs  hide.rs  lib.rs  placement_session.rs  play.rs  signals.rs  space.rs  svg_marker.rs  template.rs  where.rs
dna/zomes/where_integrity/: Cargo.toml
dna/zomes/where_integrity/src/: entries.rs  error.rs  here.rs  lib.rs  placement_session.rs  playfield.rs
electron/: .gitignore  afterSignHook.js  package-lock.json  package.json  tsconfig.json
electron/src/: constants.ts  holochain.ts  index.ts  init.ts  logger.ts  menu.ts  preload.js  settings.ts  setup.ts  userSettings.ts
electron/src/localization/: fr.json  i18n.js
electron/web/: splashscreen.css  splashscreen.html  switching.css
electron/web/logo/: icon.icns
nix/: sources.json
scripts/: build.sh  clean-npm.sh  clean.sh  copy-binaries.sh  download-hash-zome.sh  install-hc-tools.sh  install-submodules.sh  ts-bindings.sh  update-version-number.sh  write-zome-hash.sh
spec/: DESIGN.md
tests/: package-lock.json  package.json
tests/src/: common.ts  profile.ts  where.ts
ui/: .eslintrc.js  README.md  custom-elements.json  package-lock.json  package.json  rollup.config.js  web-dev.plugins.mjs
ui/apps/applet/: .gitignore  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
ui/apps/ludotheque/: index.html  package.json  rollup.config.js
ui/apps/we-applet/: package.json
ui/apps/where/: .gitignore  index.html  package.json  rollup.config.js  tsconfig.json  tsconfig.tsbuildinfo  web-dev-server.config.mjs
ui/apps/where-we/: package.json  rollup.config.js
ui/demo/: index.html  web-dev-server.config.mjs
ui/lib/: package.json  rollup.config.js
ui/lib/src/: context.ts  examples.ts  index.ts  ludotheque.store.ts  sharedRender.ts  sharedStyles.ts  stringStore.ts  surface.ts  types.ts  where.service.ts  where.store.ts
ui/lib/xliff/: fr-fr.xlf
ui/libs/elements/: package.json
ui/src/: calendar-events.service.ts  index.ts  types.ts  where.service.ts  where.store.ts
ui/src/elements/: calendar-event.ts  where-controller.ts  where-map.ts  where-space.ts
ui/stories/: index.stories.md
ui/test/: elements.test.js
ui/test/mocks/: calendar-events.mock.js  setupApolloClient.js
we-applet/: .gitignore  index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
we-applet/demo/: index.html
we-applet/src/: createLudoApplet.ts  createWhereApplet.ts  createWhereWeServicesMock.ts  index.ts  ludotheque-applet.ts  we-utils.ts  where-applet.ts
we-applet/src/appletServices/: applet-view.ts  appletServices.ts  getAssetInfo.ts  getAttachableInfo.ts  getEntryInfo.ts  search.ts
we-applet/src/common/: profilesApi.ts  setup.ts  setupDevtest.ts  we-utils.ts
we-applet/we-applet/: package.json
we-applet/we-applet/demo/: index.html
we-applet/we-applet/src/: where-applet.ts
we-applet/webhapp.workdir/: web-happ.yaml
web/: index.html  splashscreen.css  splashscreen.html  styles.css
webapp/: .gitignore  index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
webapp.ludotheque/: .gitignore  index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
webapp.ludotheque/src/: index.ts  ludotheque-app.ts  ludotheque-standalone-app.ts
webapp/src/: edit-profile.ts  globals.ts  index.ts  localization.ts  where-app.ts
webapp/webhapp.workdir/: web-happ.yaml
webapp/xliff/: fr-fr.xlf
webcomponents/: .gitignore  lit-localize.json  package.json  tsconfig.json
webcomponents/src/: contexts.ts  examples.ts  global-styles.ts  globals.ts  index.ts  localization.ts  sharedRender.ts  sharedStyles.ts  stringStore.ts  types.ts  utils.ts  where.service.ts  where.store.ts
webcomponents/src/bindings/: ludotheque.fn.ts  ludotheque.proxy.ts  ludotheque.ts  ludotheque.types.ts  playset.fn.ts  playset.proxy.ts  playset.ts  playset.types.ts  where.fn.ts  where.proxy.ts  where.ts  where.types.ts
webcomponents/src/dialogs/: where-archive-dialog.ts  where-clone-ludo-dialog.ts  where-emoji-dialog.ts  where-emoji-group-dialog.ts  (+8 more)
webcomponents/xliff/: fr-fr.xlf
workdir/: web-happ.yaml
zome/: Cargo.toml  README.md
zome/tests/: package-lock.json  package.json
zome/tests/src/: common.ts  index.ts  where.ts
zome/workdir/dna/: dna.yaml  sample.dna
zome/workdir/happ/: happ.yaml  sample-happ.happ
zome/zomes/profiles/: Cargo.toml
zome/zomes/todo_rename_zome/: Cargo.toml
zome/zomes/todo_rename_zome/src/: calendar_event.rs  lib.rs
zome/zomes/where/: Cargo.toml
zome/zomes/where/src/: lib.rs
(+77 files in other folders)
