[workspace]
members = [
  "dna/zomes/where_integrity",
  "dna/zomes/where",
  "dna/zomes/playset_integrity",
  "dna/zomes/playset",
  "dna/zomes/ludotheque_integrity",
  "dna/zomes/ludotheque",
  "dna/zomes/profiles_integrity",
  "dna/zomes/profiles"
  ]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
