[workspace]
members = [
  "dna/zomes/where_integrity",
  "dna/zomes/where",
  "dna/zomes/playset_integrity",
  "dna/zomes/playset",
  "dna/zomes/ludotheque_integrity",
  "dna/zomes/ludotheque",
  "dna/zomes/profiles_integrity",
  "dna/zomes/profiles"
  ]

[workspace.package]
version = "1.154.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", default-features = false }
hdi = { version = "0.1.3", default-features = false }
hdk = { version = "0.0.154", default-features = false }
zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "154" }


[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true
