[workspace]
members = [
  "dna/zomes/where_integrity",
  "dna/zomes/where",
  "dna/zomes/playset_integrity",
  "dna/zomes/playset",
  "dna/zomes/ludotheque_integrity",
  "dna/zomes/ludotheque",
  "dna/zomes/profiles_integrity",
  "dna/zomes/profiles"
  ]

[workspace.package]
version = "2.0.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.197", default-features = false }
hdi = { version = "=0.4.0-beta-dev.30", default-features = false }
hdk = { version = "=0.3.0-beta-dev.34", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-3.0" }


[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true
