[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "where_ludotheque"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "where_ludotheque"

[dependencies]
serde = "1.0"
hdk = { version = "0.0.154", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "154" }

ludotheque_integrity = { package = "where_ludotheque_integrity", path = "../ludotheque_integrity" }
