[package]
name = "where_ludotheque_zome"
authors = ["eric@harris-braun.com"]
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

ludotheque_integrity = { package = "where_ludotheque_integrity_zome", path = "../ludotheque_integrity" }
