[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "where_playset"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "where_playset"

[dependencies]
serde = "1.0"
hdk = { version = "0.0.154", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "154" }

playset_integrity = { package = "where_playset_integrity", path = "../playset_integrity" }
