[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "where_playset_zome"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "where_playset_zome"

[dependencies]
serde = "1.0"
hdk = { version = "0.0.154", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "154" }

playset_integrity = { package = "where_playset_integrity_zome", path = "../playset_integrity" }
