[package]
name = "where_playset_zome"
authors = ["eric@harris-braun.com"]
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

playset_integrity = { package = "where_playset_integrity_zome", path = "../playset_integrity" }
