[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "where_playset_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "where_playset_integrity"

[dependencies]
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
serde = "1.0"
hdi = { version = "0.0.19" }
