[package]
name = "profiles_zome"
authors = ["eric@harris-braun.com"]
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk.workspace = true
hc_zome_profiles_coordinator = {git = "https://github.com/holochain-open-dev/profiles", package = "hc_zome_profiles_coordinator"}

