[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "profiles_integrity_zome"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "profiles_integrity_zome"

[dependencies]
hc_zome_profiles_integrity = {git = "https://github.com/holochain-open-dev/profiles", package = "hc_zome_profiles_integrity"}

hdi = { version = "0.1.3", default-features = false }
