[package]
name = "profiles_integrity_zome"
authors = ["eric@harris-braun.com"]
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
#hc_zome_profiles_integrity = {git = "https://github.com/holochain-open-dev/profiles", version = "0.2.0" }
#hc_zome_profiles_integrity = "=0.2.0"
hc_zome_profiles_integrity = {git = "https://github.com/ddd-mtl/profiles_alt_zome", branch = "hdk-3.0" }

hdi.workspace = true
