[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "where"
version = "0.0.1-alpha1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "where"

[dependencies]
derive_more = "0.99"
serde = "1.0"
thiserror = "1.0.20"
tracing = { version = "0.1", default-features = false }

hdk = {version = "0.0.147", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "147" }

playset_integrity = { package = "where_playset_integrity", path = "../playset_integrity" }
where_integrity = { path = "../where_integrity" }

