[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "where_zome"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "where_zome"

[dependencies]
derive_more = "0.99"
serde = "1.0"
thiserror = "1.0.20"
tracing = { version = "0.1", default-features = false }

hdk = {version = "0.0.154", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "154" }

playset_integrity = { package = "where_playset_integrity_zome", path = "../playset_integrity" }
where_integrity = { package = "where_integrity_zome", path = "../where_integrity" }

