[package]
name = "where_zome"
authors = ["eric@harris-braun.com"]
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

where_integrity = { package = "where_integrity_zome", path = "../where_integrity" }

