[package]
authors = ["eric@harris-braun.com"]
edition = "2018"
name = "where_integrity"
version = "0.0.1-alpha1"


[lib]
name = "where_integrity"
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = "1.0"
tracing = { version = "0.1", default-features = false }

hdi = { version = "0.0.19", default-features = false }
